--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title></title>
+        <title>Yo Dawg</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
 
@@ -19,6 +19,9 @@
         <script src="js/vendor/lzma.js"></script>
         <script src="js/vendor/lzma_worker.js"></script>
         <script src="js/vendor/b64.js"></script>
+        <script src="js/vendor/core.js"></script>
+        <script src="js/vendor/enc-base64.js"></script>
+        <script src="js/vendor/enc-utf16.js"></script>
         <script src="js/vendor/aes.js"></script>
         <script src="js/main.js"></script>
     </head>
@@ -28,7 +31,7 @@
         <![endif]-->
 
         <!-- Add your site or application content here -->
-        <p>Xzeeb.it</p>
+        <p>Yo Dawg,</p>
         <textarea id='content' cols='30' rows='5'></textarea>
         <br />
         <br />
