--- a/src/index.html
+++ b/src/index.html
@@ -6,13 +6,15 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>Yo Dawg</title>
+        <title>CryptoLink</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
 
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
         <link rel="stylesheet" href="css/normalize.css">
+        <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,800,700|Vollkorn:400italic,700italic,400,700' rel='stylesheet' type='text/css'>
+
         <link rel="stylesheet" href="css/main.css">
         <script src="js/vendor/modernizr-2.6.2.min.js"></script>
         <script src="js/vendor/jquery-1.9.1.min.js"></script>
@@ -31,14 +33,30 @@
         <![endif]-->
 
         <!-- Add your site or application content here -->
-        <p>Yo Dawg,</p>
-        <textarea id='content' cols='30' rows='5'></textarea>
-        <br />
-        <br />
-        <input type='text' id='password' placeholder='Password'></input>
-        <br />
-        <br />
-        <button id='submit'>Make Website</button>
+        <div class='main'>
+            <div class='pagetitle'>
+                <h1>CryptoLink</h1>
+                <h2>encrypt stuff into links</h2>
+            </div>
+            <div class='cryptostuff'>
+                <textarea class='textinput' id='content' rows='10' placeholder='Your text message or html content'></textarea>
+                <br />
+                <br />
+                <input class='textinput' type='text' id='password' placeholder='Password'></input>
+                <button class='button' id='submit'>Make Link</button>
+                <div class='progressbar'><div class='bar' style='width:20%'></div></div>
+                <div class='urlbox'>
+                    <em>URL:</em><a href='#' class='url'>http://cryptolink.org/#13faef39fe9fj332432jifesfef32h32023rr32r32r320r3jfihfislfh3902r0339r903ur93fehsfiesl390fj320fjeislfeji202jifejief02jef02fj20jffie2</a>
+                    <div class='status'>
+                        Length: <em>284</em> Encrypted: <em>No</em>
+                    </div>
+                </div>
 
+            </div>
+            <div class='faq'>
+                <h3>FAQ</h3>
+                <h4>What is Krilink?</h4>
+            </div>
+        </div>
     </body>
 </html>
