--- a/src/index.html
+++ b/src/index.html
@@ -55,9 +55,18 @@
                 <div class='cryptostuff'>
                     <div id='content-type'>
                         <div class='radiobutton'>
-                            <span class='option first' data-type='text'><i class='icon-font'></i></span>
-                            <span class='option' data-type='html'><i class='icon-code'></i></span>
-                            <span class='option last' data-type='img'><i class='icon-picture'></i></span>
+                            <span class='option first' data-type='text'>
+                                <span class='label'>Encrypt Text Message</span>
+                                <i class='icon-font'></i>
+                            </span>
+                            <span class='option' data-type='html'>
+                                <span class='label'>Encrypt HTML WebPage</span>
+                                <i class='icon-code'></i>
+                            </span>
+                            <span class='option last' data-type='img'>
+                                <span class='label'>Encrypt Picture</span>
+                                <i class='icon-picture'></i>
+                            </span>
                         </div>
                     </div>
 
