much better tooltips

--- a/src/index.html
+++ b/src/index.html
@@ -56,18 +56,18 @@
                     <div id='content-type'>
                         <div class='radiobutton'>
                             <span class='option first' data-type='text'>
-                                <span class='label'>Encrypt Text Message</span>
                                 <i class='icon-font'></i>
                             </span>
                             <span class='option' data-type='html'>
-                                <span class='label'>Encrypt HTML WebPage</span>
                                 <i class='icon-code'></i>
                             </span>
                             <span class='option last' data-type='img'>
-                                <span class='label'>Encrypt Picture</span>
                                 <i class='icon-picture'></i>
                             </span>
                         </div>
+                        <span class='label invisible'>
+                            Encrypt Text Messages
+                        </span>
                     </div>
 
                     <textarea class='textinput fixed' id='editor-text' rows='10' placeholder='Message'></textarea>
