basic qr code support

--- a/src/index.html
+++ b/src/index.html
@@ -29,6 +29,7 @@
         <script src="js/vendor/aes.js"></script>
         <script src="js/vendor/ace/ace.js"></script>
         <script src="js/vendor/zxcvbn-async.js"></script>
+        <script src="js/vendor/qrcode.min.js"></script>
         <script src="js/cryptolink.js"></script>
         <script src="js/gui.js"></script>
         
@@ -92,6 +93,7 @@
 
                     <div class='urlbox hidden'>
                         <em>URL:</em><a href='#' class='url'></a>
+                        <div id='qrcode'></div>
                         <div class='status'>
                             Length: <em class='js-url-length'>284</em> Encrypted: <em class='js-url-encrypted'>No</em>
                         </div>
