better cryptolink core api and better public/private urls

--- a/src/1.0/public/index.html
+++ b/src/1.0/public/index.html
@@ -28,7 +28,7 @@
         <script src="/js/vendor/enc-utf16.js"></script>
         <script src="/js/vendor/aes.js"></script>
         <script src="/js/cryptolink.js"></script>
-        <script> cryptolink.decode_encrypted_url(window.location.href); </script>
+        <script> cryptolink.decode_public_url(window.location.href); </script>
     </head>
     <body>
     </body>
