--- a/src/index.html
+++ b/src/index.html
@@ -20,9 +20,7 @@
         <link rel="stylesheet" href="css/main.css">
         <script src="js/vendor/modernizr-2.6.2.min.js"></script>
         <script src="js/vendor/jquery-1.9.1.min.js"></script>
-        <script src="js/vendor/lzma.js"></script>
-        <script src="js/vendor/lzma_worker.js"></script>
-        <script src="js/vendor/b64.js"></script>
+        <script src="js/vendor/lz-string-1.3.0.js"></script>
         <script src="js/vendor/core.js"></script>
         <script src="js/vendor/enc-base64.js"></script>
         <script src="js/vendor/enc-utf16.js"></script>
