changing qrcode lib + correct zxcvbn path

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <script src="js/vendor/aes.js"></script>
         <script src="js/vendor/ace/ace.js"></script>
         <script src="js/vendor/zxcvbn-async.js"></script>
-        <script src="js/vendor/qrcode.min.js"></script>
+        <script src="js/vendor/jquery.qrcode-0.6.0.min.js"></script>
         <script src="js/cryptolink.js"></script>
         <script src="js/gui.js"></script>
         
