--- a/1.0/public/index.html
+++ b/1.0/public/index.html
@@ -12,20 +12,20 @@
 
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
-        <link rel="stylesheet" href="/css/normalize.css">
-        <link href='http://fonts.googleapis.com/css?family=Inconsolata:400,700' rel='stylesheet' type='text/css'>
-        <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700,900,200italic,300italic,400italic,600italic,700italic,900italic' rel='stylesheet' type='text/css'>
+        <link rel="stylesheet" href="../../css/normalize.css">
+        <link href='//fonts.googleapis.com/css?family=Inconsolata:400,700' rel='stylesheet' type='text/css'>
+        <link href='//fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700,900,200italic,300italic,400italic,600italic,700italic,900italic' rel='stylesheet' type='text/css'>
         <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.min.css" rel="stylesheet">
 
-        <link rel="stylesheet" href="/css/main.css">
-        <script src="/js/vendor/modernizr-2.6.2.min.js"></script>
-        <script src="/js/vendor/jquery-1.9.1.min.js"></script>
-        <script src="/js/vendor/lz-string-1.3.0.js"></script>
-        <script src="/js/vendor/core.js"></script>
-        <script src="/js/vendor/enc-base64.js"></script>
-        <script src="/js/vendor/enc-utf16.js"></script>
-        <script src="/js/vendor/aes.js"></script>
-        <script src="/js/cryptolink.js"></script>
+        <link rel="stylesheet" href="../../css/main.css">
+        <script src="../../js/vendor/modernizr-2.6.2.min.js"></script>
+        <script src="../../js/vendor/jquery-1.9.1.min.js"></script>
+        <script src="../../js/vendor/lz-string-1.3.0.js"></script>
+        <script src="../../js/vendor/core.js"></script>
+        <script src="../../js/vendor/enc-base64.js"></script>
+        <script src="../../js/vendor/enc-utf16.js"></script>
+        <script src="../../js/vendor/aes.js"></script>
+        <script src="../../js/cryptolink.js"></script>
         <script> cryptolink.decode_public_url(window.location.href); </script>
     </head>
     <body>
