--- a/index.html
+++ b/index.html
@@ -154,8 +154,28 @@
                     There is unfortunately much less room inside a QR-Code.
                     </p>
                     <h3>Contributions</h3>
-                    <p>TODO: Paypal</p>
+                    <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+                        <input type="hidden" name="cmd" value="_s-xclick">
+                        <input type="hidden" name="hosted_button_id" value="XWN9JBWMUX2QY">
+                        <input type="image" src="https://www.paypalobjects.com/en_US/BE/i/btn/btn_donateCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+                        <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
+                    </form>
                     <p>TODO: Bitcoin</p>
+                   <script src="http://coinwidget.com/widget/coin.js"></script>
+                    <script>
+                    CoinWidgetCom.go({
+                        wallet_address: "1CtfKBb1iZyhejGRM7X6Hdb6xC7NTeox4W"
+                        , currency: "bitcoin"
+                        , counter: "hide"
+                        , alignment: "bc"
+                        , qrcode: true
+                        , auto_show: false
+                        , lbl_button: "Donate"
+                        , lbl_address: "CryptoLink's Bitcoin Address:"
+                        , lbl_count: "donations"
+                        , lbl_amount: "BTC"
+                    });
+                    </script> 
             </div>
             <div class='page footer'>
                 MIT Licensed by <a href='http://frederic.vanderessen.com'>Frédéric van der Essen</a>
